--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome To</h1>
-    <h2>Hamidur Rahman World!</h2>
-    <h3>my first website page make up.</h3>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit nemo quo ut, distinctio reiciendis ducimus unde a doloremque natus quisquam, saepe at non beatae libero accusantium veniam ullam similique quaerat laboriosam. Dolorum, itaque ratione quaerat temporibus tenetur necessitatibus veritatis impedit dicta reiciendis debitis odio fuga ducimus provident enim fugiat recusandae.</p>
+    <section class="kid">
+        <div class="fid">
+            <h1>Welcome To</h1>
+        <h2><span class="mid">Hamidur Rahman</span> World!</h2>
+        <h3>my first website page make up.</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit nemo quo ut, distinctio reiciendis ducimus unde a doloremque natus quisquam, saepe at non beatae libero accusantium veniam ullam similique quaerat laboriosam. Dolorum, itaque ratione quaerat temporibus tenetur necessitatibus veritatis impedit dicta reiciendis debitis odio fuga ducimus provident enim fugiat recusandae.</p>
+        <a class="gid" target="_blank" href="https://www.youtube.com/">HAMID</a>
+        </div>
+        <div class="fid">
+            <img src="hamid.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
